--- a/api-service.yaml
+++ b/api-service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: api-service
 spec:
+  type: ClusterIP
   selector:
     app: synergychat-api
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8080
-    nodePort: 30080
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
