--- a/crawler-deployment.yaml
+++ b/crawler-deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: synergychat-crawler
   labels:
     app: synergychat-crawler
+  name: synergychat-crawler
 spec:
   replicas: 1
   selector:
@@ -14,9 +14,57 @@ spec:
       labels:
         app: synergychat-crawler
     spec:
+      volumes:
+      - name: cache-volume
+        emptyDir: {}
       containers:
-      - name: synergychat-crawler
-        image: bootdotdev/synergychat-crawler:latest
-        envFrom:
-        - configMapRef:
-            name: synergychat-crawler-configmap
+        - image: bootdotdev/synergychat-crawler:latest
+          name: synergychat-crawler-1
+          volumeMounts:
+          - name: cache-volume
+            mountPath: /cache
+          envFrom:
+            - configMapRef:
+                name: synergychat-crawler-configmap
+        - image: bootdotdev/synergychat-crawler:latest
+          name: synergychat-crawler-2
+          volumeMounts:
+          - name: cache-volume
+            mountPath: /cache
+          env:
+            - name: CRAWLER_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_PORT_2
+            - name: CRAWLER_DB_PATH
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_DB_PATH
+            - name: CRAWLER_KEYWORDS
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_KEYWORDS
+        - image: bootdotdev/synergychat-crawler:latest
+          name: synergychat-crawler-3
+          volumeMounts:
+          - name: cache-volume
+            mountPath: /cache
+          env:
+            - name: CRAWLER_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_PORT_3
+            - name: CRAWLER_DB_PATH
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_DB_PATH
+            - name: CRAWLER_KEYWORDS
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_KEYWORDS
