--- a/api-deployment.yaml
+++ b/api-deployment.yaml
@@ -14,12 +14,17 @@ spec:
       labels:
         app: synergychat-api
     spec:
+      volumes:
+      - name: synergychat-api-volume
+        persistentVolumeClaim:
+          claimName: synergychat-api-pvc
       containers:
         - image: bootdotdev/synergychat-api:latest
           name: synergychat-api
-          env:
-            - name: API_PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: synergychat-api-configmap
-                  key: API_PORT
+          volumeMounts:
+          - name: synergychat-api-volume
+            mountPath: /persist
+          envFrom:
+            - configMapRef:
+                name: synergychat-api-configmap
+                
